# pqn-stack

./: .gitignore  Containerfile  README.md  config_example.toml  pyproject.toml  test.py
.github/workflows/: python-app.yml
app/: main.py
app/templates/home/: protocols.html
configs/: pqn-node.toml
scripts/: check_polarization_stability  chsh_daily_report.py  chsh_device  coincidence_gui  coordination_websocket_client  elliptic_address_setter  fix.py  http_server  http_server2  loomis_motors  manual_polserver  mini_pc_node  network_switch_characterization  polarimeter_bloch_sphere  polserver  polserver2  power_meter  powermeter_test  qd_device  run_chsh.py  run_tomography  run_tomography.py  run_visibility  thorlabs_polarimeter_test  tomography_analysis  tomography_config.toml  ufl_closet_motors
src/: .plot.py.un~  patch.py  plot.py  run_tomography.py  switchtest.py  tomography.py  tomography_1777573646_R1_H.csv  tomography_1777574384_R1_H.csv  tomography_1777574391_R1_V.csv  tomography_1777574398_R1_D.csv  tomography_1777574405_R1_A.csv  tomography_1777574412_R1_R.csv  tomography_1777574419_R1_L.csv
src/pqn_node/: cli.py  constants.py  daily_report.py  main.py
src/pqn_node/api/: deps.py  main.py
src/pqn_node/api/routes/: chsh.py  coordination.py  debug.py  games.py  (+5 more)
src/pqn_node/core/: config.py
src/pqnstack/: cli.py  constants.py
src/pqnstack/app/: chsh_endpoints.py  cron_manager.py  dependencies.py  main.py  polarimeter_endpoints.py  qkd_endpoints.py  settings.py  timetagger_endpoints.py  utils.py
src/pqnstack/base/: datalogger.py  driver.py  errors.py  instrument.py  network.py  sensor.py
src/pqnstack/network/: client.py  node.py  packet.py  router.py
src/pqnstack/pqn/: nodes.py
test/playground/messaging/: client.py  node.py  router.py
tests/: developing_base_driver.ipynb
tests/dummies/: dummy_instrument.py  dummy_instruments.py
tests/loomis_motors/: node.py
tests/messaging/: blocking_client.py  client.py  config_example.toml  node.py  rotator_test.toml  router.py
tests/minipc_timetagger/: node.py
tests/pytest/: test_internal_network.py
tests/pytest/drivers/: test_polarimeter.py
(+49 files in other folders)
