[project]
name = "pqn"
version = "0.1.0"
description = "Illinois Computes work on software stack for PQN."
authors = [
    { name = "Santiano Nunez-Corrales", email = "nunezco2@illinois.edu" },
    { name = "Benjamin Nussbaum", email = "bn9@illinois.edu" },
    { name = "Marcos Frenkel", email = "marcosf2@illinois.edu" },
]
dependencies = [
    "numpy>=2.1.3",
    "matplotlib>=3.9.2",
    "pyfirmata2>=2.5.0",
    "thorlabs-apt-device>=0.3.8",
    "pyzmq>=26.2.0",
    "dataclasses-json>=0.6.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = ["ruff>=0.8.0", "pytest-cov>=6.0.0", "mypy>=1.13.0", "jupyterlab>=4.3.1"]


[tool.mypy]
strict = true
pretty = true

show_error_codes = true
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pdm.scripts]
lint = "ruff check"
format = "ruff format"
test = "pytest"
coverage = "pytest --cov=src"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for details.
select = ["ALL"]
ignore = [
    "ANN",  # Let Mypy handle type annotations
    "D1",   # Don't warn about missing docstrings (but lint the ones that exist)
    "FIX",  # The linter doesnt need to remind us about TODOs
    "S301", # We use pickle
    "TD",   # We don't use this TODO style
]

# Ignore rules which are redundant when using the formatter.
# See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules for details.
extend-ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "E501",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101", # Assert
]
# Run pytest lint rules only in test files.
"!tests/*" = ["PT"]
# Allow "unused" imports when exposing objects from submodules.
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy" # One of: "google" | "numpy" | "pep257"
